[tool.poetry]
name = "limiter"
version = "0.1.0"
description = ""
authors = ["Dean Keinan"]

[tool.poetry.dependencies]
python = "3.9.7"
Flask = "^2.1.2"
rich = "^12.4.4"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
